-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.3.1
-
None
-
-
a1e6250349 (qt/qtdeclarative/6.4) d437b4c517 (qt/qtdeclarative/6.3) a1e6250349 (qt/tqtc-qtdeclarative/6.4) cdc0e5cac2 (qt/tqtc-qtdeclarative/dev) d437b4c517 (qt/tqtc-qtdeclarative/6.3) d437b4c517 (qt/qtdeclarative/6.3.2)
There is regression comparing with Qt 6.2.4.
HoverHandler started to steal hover from TextEdit.
Sample code:
import QtQuick Window { id: window width: 640 height: 480 visible: true TextEdit { anchors.centerIn: parent readOnly: true textFormat: TextEdit.RichText text: '<a href="qt.io">Qt | Cross-platform software development for embedded & desktop</a>' onLinkHovered: console.log('link hovered') // <--- no output on Qt 6.3.1 } Item { anchors.fill: parent HoverHandler {} } }
Steps to reproduce:
1. Run example
2. Hover a link
Expected result:
1. 'link hovered' is printed to application output
2. Cursor shape changes to PointingHandCursor
- relates to
-
QTBUG-89873 PinchHandler and HoverHandler react to touch event even under popup dialog
-
- Reported
-