QQuickTextArea/Field: don't block hover events

Controls shouldn't block hover from propagating by default.
This was a regression in Qt 6.2 compared to Qt 5.15, and was
fixed with 0c7b0a43064c8be452f4be74701f1dabce87f24c. But that
patch didn't consider many of the items that overrode hover
event handling from c++, like TextArea and TextField;
they too need to ignore hover events, to not stop propagation -
it's not enough to only do it in the base class.

This patch fixes the regression that some controls
and items were blocking propagation compared to Qt 5.15.

Fixes: QTBUG-104537
Change-Id: Ie047da6ac7d5be5ea6fd52d5a5446787df6d10f5
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>
(cherry picked from commit cdc0e5cac27890a5ea0590dbdc7cf4c0f624dac2)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>