src/quicktemplates2/qquickrangeslider.cpp
@@ -1172,6 +1172,7 @@ void QQuickRangeSlider::hoverEnterEvent(QHoverEvent *event)
     Q_D(QQuickRangeSlider);
     QQuickControl::hoverEnterEvent(event);
     d->updateHover(event->position());
+    event->ignore();
 }
 
 void QQuickRangeSlider::hoverMoveEvent(QHoverEvent *event)
@@ -1179,6 +1180,7 @@ void QQuickRangeSlider::hoverMoveEvent(QHoverEvent *event)
     Q_D(QQuickRangeSlider);
     QQuickControl::hoverMoveEvent(event);
     d->updateHover(event->position());
+    event->ignore();
 }
 
 void QQuickRangeSlider::hoverLeaveEvent(QHoverEvent *event)
@@ -1187,6 +1189,7 @@ void QQuickRangeSlider::hoverLeaveEvent(QHoverEvent *event)
     QQuickControl::hoverLeaveEvent(event);
     d->first->setHovered(false);
     d->second->setHovered(false);
+    event->ignore();
 }
 
 void QQuickRangeSlider::keyReleaseEvent(QKeyEvent *event)
