src/quicktemplates2/qquickscrollbar.cpp
@@ -839,6 +839,7 @@ void QQuickScrollBar::hoverEnterEvent(QHoverEvent *event)
     Q_D(QQuickScrollBar);
     QQuickControl::hoverEnterEvent(event);
     d->updateHover(event->position());
+    event->ignore();
 }
 
 void QQuickScrollBar::hoverMoveEvent(QHoverEvent *event)
@@ -846,6 +847,7 @@ void QQuickScrollBar::hoverMoveEvent(QHoverEvent *event)
     Q_D(QQuickScrollBar);
     QQuickControl::hoverMoveEvent(event);
     d->updateHover(event->position());
+    event->ignore();
 }
 
 void QQuickScrollBar::hoverLeaveEvent(QHoverEvent *event)
@@ -854,6 +856,7 @@ void QQuickScrollBar::hoverLeaveEvent(QHoverEvent *event)
     QQuickControl::hoverLeaveEvent(event);
 
     d->updateHover(QPoint(), false);    //position is not needed when we force it to unhover
+    event->ignore();
 }
 #endif
 
